--- a/2017202117/2017202117_project1.ipynb
+++ b/2017202117/2017202117_project1.ipynb
@@ -6,14 +6,29 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-c6ead83d9fb6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mgym\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset_default_graph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:\n",
+      "The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
+      "For more information, please see:\n",
+      "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
+      "  * https://github.com/tensorflow/addons\n",
+      "  * https://github.com/tensorflow/io (for I/O related ops)\n",
+      "If you depend on functionality not listed there, please file an issue.\n",
+      "\n",
+      "Average reward for episode 25 : 21.640000.\n",
+      "Average reward for episode 50 : 24.960000.\n",
+      "Average reward for episode 75 : 17.480000.\n",
+      "Average reward for episode 100 : 11.480000.\n",
+      "Average reward for episode 125 : 15.560000.\n",
+      "Average reward for episode 150 : 13.880000.\n",
+      "Average reward for episode 175 : 17.640000.\n",
+      "Average reward for episode 200 : 17.840000.\n",
+      "Average reward for episode 225 : 28.680000.\n",
+      "Average reward for episode 250 : 35.880000.\n",
+      "Average reward for episode 275 : 54.560000.\n",
+      "Average reward for episode 300 : 50.400000.\n"
      ]
     }
    ],
@@ -82,7 +97,7 @@
     "drs = [] #每个action的reward\n",
     "reward_sum = 0 #累计reward\n",
     "episode_num = 1 #每次实验index\n",
-    "total_episodes = 10000 #总实验次数\n",
+    "total_episodes = 300 #总实验次数\n",
     "\n",
     "#创建会话\n",
     "with tf.Session() as sess:\n",
